# solana-anchor-tute

./: Anchor.toml
programs/anchor-counter/: Cargo.toml
programs/anchor-counter/src/: lib.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
tests/: anchor-counter.ts  transfer-hook.ts
