[package]
name = "anchor-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "=0.29.0"
solana-program = "=1.17.28"
spl-token-2022 = "=1.0.0"
proc-macro-crate = "=1.3.1"
toml_edit = "=0.20.7"
spl-transfer-hook-interface = "=0.5.1"
spl-tlv-account-resolution = "=0.5.1"